// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphQL: Postcode postcodeSearch [presets: perPage 3] by exact postcode 1`] = `
[
  {
    "lat": 51.547915089,
    "lng": -0.00743124,
    "postcode": "E20 1AA",
    "url": "https://www.google.com/maps/search/?api=1&query=51.547915089,-0.007431240",
  },
]
`;

exports[`GraphQL: Postcode postcodeSearch [presets: perPage 3] by wildcard 1`] = `
[
  {
    "lat": 51.547915089,
    "lng": -0.00743124,
    "postcode": "E20 1AA",
    "url": "https://www.google.com/maps/search/?api=1&query=51.547915089,-0.007431240",
  },
  {
    "lat": 51.548136,
    "lng": -0.007724,
    "postcode": "E20 1AB",
    "url": "https://www.google.com/maps/search/?api=1&query=51.548136000,-0.007724000",
  },
  {
    "lat": 51.54796467,
    "lng": -0.007587,
    "postcode": "E20 1AD",
    "url": "https://www.google.com/maps/search/?api=1&query=51.547964670,-0.007587000",
  },
]
`;

exports[`GraphQL: Postcode postcodeSearch [presets: perPage 3] by wildcard: 2nd page 1`] = `
[
  {
    "lat": 51.546844,
    "lng": -0.006872,
    "postcode": "E20 1AE",
    "url": "https://www.google.com/maps/search/?api=1&query=51.546844000,-0.006872000",
  },
  {
    "lat": 51.547427816,
    "lng": -0.006803491,
    "postcode": "E20 1AF",
    "url": "https://www.google.com/maps/search/?api=1&query=51.547427816,-0.006803491",
  },
  {
    "lat": 51.546690968,
    "lng": -0.006835695,
    "postcode": "E20 1AG",
    "url": "https://www.google.com/maps/search/?api=1&query=51.546690968,-0.006835695",
  },
]
`;
